examples/test/testpolicy10225.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10225
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key49: value18
      key42: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value25
          key24: value49
          key39: value44
      podSelector:
        matchLabels:
          key28: value47
